add ci/cd on develpment
