# internal/models/user.go
@@ -36,14 +36,15 @@ type UserLoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
-type LoginResponse struct {
-	Token string `json:"token"`
-}
 type UserResponse struct {
 	ID    uint   `json:"id"`
 	Name  string `json:"name"`
 	Email string `json:"email"`
 	Role  string `json:"role"`
+}
+type LoginResponse struct {
+	Token string       `json:"token"`
+	User  UserResponse `json:"user"`
 }
 type UserUpdateRequest struct {
 	Name  string `json:"name"`
